# weckr-sdks

./: .gitignore  README.md
benchmark/: README.md  run.ts  tasks.json
benchmark/fixtures/: long-document.md
benchmark/results/: 2026-07-23.json
mcp/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mcp/src/: client.ts  index.ts  tools.ts  types.ts  zod-to-jsonschema.ts
python/: .gitignore  LICENSE  README.md  pyproject.toml
python/tests/: test_client.py  test_kimi.py  test_normalize.py  test_pricing.py
python/weckr/: __init__.py  cap.py  client.py  errors.py  logger.py  normalize.py  pricing.py
typescript/: .npmignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: cap-cache.ts  errors.ts  index.ts  logger.ts  pricing.ts  providers.ts  types.ts  weckr.ts
typescript/test/: gemini.test.ts  kimi.test.ts  weckr.test.ts
